Fix fan-out checkbox label wrapping

--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -99,6 +99,7 @@ label.required::after {
 .checkbox-row label {
     margin-bottom: 0;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .checkbox-row .field-help {
